@@ -8,7 +8,7 @@ Version 1.6.1
 - BUG: Showing properties from the explorer svn properties tab did not work
        if a language other than English was set. (Stefan)
 - BUG: Crash in "cleanup". (Stefan)
-- BUG: TortoiseBlame did showed only empty files. (Stefan)
+- BUG: TortoiseBlame showed only empty files. (Stefan)
 - BUG: Crash when showing the revision graph where the URL of the repository
        required escaping. (Stefan)
 - BUG: The log dialog would show paths incorrectly greyed out or hidden
@@ -26,6 +26,7 @@ Version 1.6.1
 - BUG: The log dialog used the wrong font. (Stefan)
 - BUG: Blame showed revisions as merged even if they were not. (Stefan)
 - BUG: Externals weren't shown if changelists were present. (Stefan)
+- BUG: The SubWCRevCOM didn't return date information. (Stefan)
 
 Version 1.6.0
 - NEW: Ignoring of multiple selected items by their extension. See
